<resources>
    <string name="app_name">SSHCommandSender</string>
    <string name="address_label">Endpoint address:</string>
    <string name="address_hint">xxx.xxx.xxx.xxx</string>
    <string name="port_label">SSH port:</string>
    <string name="port_hint">22</string>
    <string name="username_label">Username:</string>
    <string name="username_hint">admin</string>
    <string name="password_label">Password:</string>
    <string name="password_hint">********</string>
    <string name="commands_label">Command:</string>
    <string name="commands_hint">sudo shutdown</string>
    <string name="send_btn">Send Command</string>
    <string name="general_error">INPUT FIELD ERROR</string>
    <string name="address_error_invalid">INVALID ADDRESS</string>
    <string name="address_error_empty">ADDRESS REQUIRED</string>
    <string name="port_error_empty">PORT REQUIRED</string>
    <string name="username_error_empty">USERNAME REQUIRED</string>
    <string name="password_error_empty">PASSWORD REQUIRED</string>
    <string name="command_error_empty">COMMAND REQUIRED</string>
    <string name="output_label">Output:</string>
    <string name="send_success">SENT SUCCESSFULLY</string>
    <string name="send_failed">FAILED TO SEND</string>
    <string name="connected">Connected Successfully</string>
    <string name="not_connected">Connection Failed</string>
    <string name="type_info">INFO</string>
    <string name="type_error">ERROR</string>
    <string name="log_pattern">\n[APP] - %s\n</string>
    <string name="log_type_pattern">\n[APP]:[%s] - %s\n</string>
</resources>